Fixed overflow from experience and sw projects cards

--- a/style.css
+++ b/style.css
@@ -920,12 +920,13 @@ SW PROJECTS SECTION
 
 .sw-projects-img {
     /* display: inline; */
-    padding-right: 20px;
+    /* padding-right: 20px; */
     height: 240px;
     width: 400px;
 }
 
 .sw-projects-info-container {
+    margin-left: 20px;
     display: flex;
     justify-content: space-between;
     flex-direction: column;
@@ -1051,7 +1052,7 @@ RESPONSIVE STYLING
     }
 
     .page-container {
-        padding: 0 1em;
+        padding: 0 10px;
         /* overflow:hidden; */
 
         /* margin: 0 1em; */
@@ -1119,6 +1120,10 @@ RESPONSIVE STYLING
             "card3";
     }
 
+    .card {
+        margin: 10px 0;
+    }
+
     #skills-container {
         margin-top: 0;
 
@@ -1172,6 +1177,8 @@ RESPONSIVE STYLING
     }
 
     .sw-projects-cards {
+        width: 100%;
+        padding: 20px;
         /* width: 750px; */
     }
 
@@ -1188,6 +1195,7 @@ RESPONSIVE STYLING
 
     /* Red */
     .sw-projects-info-container {
+        margin: 0;
         height: 100%;
         justify-content: space-between;
     }
@@ -1203,6 +1211,13 @@ RESPONSIVE STYLING
     .sw-projects-title-container {
         flex-direction: column;
         align-items: flex-start;
+    }
+
+    .sw-projects-img {
+        /* display: inline; */
+        /* padding-right: 20px; */
+        height: calc(240px / 2);
+        width: calc(400px / 2);
     }
 
     .experience-title-container {
